log/build_2021-05-28_16-14-49/om_aiv_util/stderr.log
  File "/home/omron/Omron_LD/install/om_aiv_util/lib/python3.8/site-packages/om_aiv_util/socket_driver.py", line 225
    print "starting connection to", server_addr
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("starting connection to", server_addr)?

